[package]
name = "tokimo-package-utils"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[lints.rust]
unsafe_code     = "warn"
unused_must_use = "deny"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# 本 crate 的合理豁略
wildcard_imports        = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
items_after_statements  = "allow"
struct_excessive_bools  = "allow"
similar_names           = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
